--- a/css/style.css
+++ b/css/style.css
@@ -568,6 +568,10 @@ h3, .h3 {
   .blog_categorie_area .col-lg-4 {
     margin-top: 30px;
   }
+
+  .blog_categorie_area .col-lg-8 {
+    margin-top: 60px;
+  }
   .blog_area {
     padding-bottom: 80px;
   }
